--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@
 
 # The required plugins:
 -e git+https://github.com/berlinonline/ckanext-berlintheme.git@feature/berlin.de#egg=ckanext-berlintheme
--e git+https://github.com/berlinonline/ckanext-berlinauth.git@master#egg=ckanext-berlinauth
+-e git+https://github.com/berlinonline/ckanext-berlinauth.git@feature/portal-mode#egg=ckanext-berlinauth
 -e git+https://github.com/berlinonline/ckanext-berlin_dataset_schema.git@master#egg=ckanext-berlin_dataset_schema
 -e git+https://github.com/berlinonline/ckanext-dcatde_berlin.git@master#egg=ckanext-dcatde_berlin
 -e git+https://github.com/knudmoeller/fisbroker.git@develop#egg=ckanext-fisbroker
